# ChangeLog for net-analyzer/openvas-libraries
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-analyzer/openvas-libraries/ChangeLog,v 1.30 2015/01/25 16:36:34 jlec Exp $

  25 Jan 2015; Justin Lecher <jlec@gentoo.org> openvas-libraries-7.0.6.ebuild,
  +files/openvas-libraries-7.0.6-underlinking.patch:
  Fix build errors in test app, #537518

*openvas-libraries-8.0_beta4 (01 Dec 2014)
*openvas-libraries-7.0.6 (01 Dec 2014)

  01 Dec 2014; Justin Lecher <jlec@gentoo.org> -openvas-libraries-4.0.5.ebuild,
  -openvas-libraries-6.0.0.ebuild, -openvas-libraries-6.0.1.ebuild,
  -openvas-libraries-7.0.4-r1.ebuild, +openvas-libraries-7.0.6.ebuild,
  +openvas-libraries-8.0_beta4.ebuild:
  Version Bump; drop old

*openvas-libraries-7.0.5 (04 Nov 2014)

  04 Nov 2014; Justin Lecher <jlec@gentoo.org> +openvas-libraries-7.0.5.ebuild:
  Version Bump

  22 Oct 2014; Jeroen Roovers <jer@gentoo.org>
  openvas-libraries-8.0_beta3.ebuild:
  Fix typo in DEPEND (bug #526484).

  22 Oct 2014; Justin Lecher <jlec@gentoo.org> -openvas-libraries-7.0.2.ebuild,
  -openvas-libraries-7.0.4.ebuild, openvas-libraries-7.0.4-r1.ebuild:
  Drop old

*openvas-libraries-8.0_beta3 (22 Oct 2014)

  22 Oct 2014; Justin Lecher <jlec@gentoo.org>
  openvas-libraries-7.0.4-r1.ebuild, -openvas-libraries-8.0_beta2.ebuild,
  +openvas-libraries-8.0_beta3.ebuild,
  -files/openvas-libraries-8.0_beta2-underlinking.patch,
  +files/openvas-libraries-8.0_beta3-underlinking.patch:
  Bump to latest beta

  17 Oct 2014; Justin Lecher <jlec@gentoo.org> openvas-libraries-4.0.5.ebuild,
  openvas-libraries-6.0.0.ebuild, openvas-libraries-6.0.1.ebuild,
  openvas-libraries-7.0.2.ebuild, openvas-libraries-7.0.4.ebuild,
  openvas-libraries-7.0.4-r1.ebuild, openvas-libraries-8.0_beta2.ebuild:
  Restrict gnutls version, so far no fix from upstream available, #525640

*openvas-libraries-7.0.4-r1 (30 Sep 2014)

  30 Sep 2014; Justin Lecher <jlec@gentoo.org>