@@ -1,0 +1,12 @@
+DEFINED_PHASES=compile configure install prepare test
+DEPEND=app-crypt/gpgme >=dev-libs/glib-2.16 >=dev-libs/hiredis-0.10.1 dev-libs/libksba =net-libs/gnutls-2* net-libs/libpcap net-analyzer/net-snmp !net-analyzer/openvas-libnasl >=net-libs/libssh-0.5.0 ldap? ( net-nds/openldap ) sys-devel/bison sys-devel/flex virtual/pkgconfig dev-util/cmake sys-devel/make >=dev-util/cmake-2.8.12 userland_GNU? ( >=sys-apps/findutils-4.4.0 )
+DESCRIPTION=A remote security scanner for Linux (openvas-libraries)
+EAPI=5
+HOMEPAGE=http://www.openvas.org/
+IUSE=ldap
+LICENSE=GPL-2
+RDEPEND=app-crypt/gpgme >=dev-libs/glib-2.16 >=dev-libs/hiredis-0.10.1 dev-libs/libksba =net-libs/gnutls-2* net-libs/libpcap net-analyzer/net-snmp !net-analyzer/openvas-libnasl >=net-libs/libssh-0.5.0 ldap? ( net-nds/openldap )
+SLOT=0
+SRC_URI=http://wald.intevation.org/frs/download.php/1866/openvas-libraries-8.0+beta5.tar.gz
+_eclasses_=cmake-utils	0e29eadbd656185bce30d2449ab48035	eutils	998e5931fb95b10a6a11ec796ada2759	flag-o-matic	c263990f1b677b0f0be0a3299f179762	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	toolchain-funcs	0dfbfa13f57c6184f4728d12ac002aac
+_md5_=b54eb01f90cda0e81d51902c3c600fc8
