@@ -8,30 +8,34 @@ AUX openvas-libraries-7.0.6-underlinking.patch 1348 SHA256 574a8e59866c3e1526ad2
 AUX openvas-libraries-8.0_beta3-underlinking.patch 909 SHA256 bd43e373b89f63b398bc64e2a42877e82a5914d913d6d9a1253f68db787f71f6 SHA512 fadeb419904428a8a0bc8b2a8e48859b5ba9fb24094b00baf56750955ba15fb5fc8e096195690d72c9367adbc9f479c811c425259cdc256db7cdef7255f20823 WHIRLPOOL 71deafe5d549eb7afa2557543a3dc24fe7ff9592008937a7c558659699e27062b73df6f4056e907206abf56ffd952f92bc93b1f181557e8ddd41a8c67d883350
 DIST openvas-libraries-7.0.5.tar.gz 577595 SHA256 2a760b52b991e1df2af9279b53959313b22640da30d123762a06af048485d563 SHA512 a00211b7e42bd37153f26260379fc76e0cde2e613e6d58b478024fcae96bcfa7ae94152012f142eae6a5a014dad751e894ebaf2cda1218f76fb8c5b233d6aa2f WHIRLPOOL 7deffa4f6b9fb02e55b9fe1a437722ac92349936fdbe6ff682fe997e9c2443b5538a1249d5eaea3fd8eb6462b0748a947068218313867f911162f7eaf3e475c0
 DIST openvas-libraries-7.0.6.tar.gz 578028 SHA256 84f0064124e0685004420868b68602527a4d3003db4f20d43a0dd2e3d6b7cfdb SHA512 54cd1dcbb51cfe97317f3fa73bb727746d490af957f7e21bf4128ed763ae412c3cafe8776264000406157c57cd52d166f3dbd9ccef586fb1da5debe3f680e818 WHIRLPOOL b1094c3447cd8af50ec5752507e6d0b8eecb0abe862d18c7d218ad7be0037187e3e9e8c8e13d1a9296e9d2bb9e40f3e4f36549366842596294bbf2a8ac27d281
+DIST openvas-libraries-7.0.7.tar.gz 578578 SHA256 d04563d620952618af69e2db7afef8539f6aae8dffe1e8c0f4127abe9e33d20f SHA512 6960b8ae65bb2f4182bd8c4a513c723c92990d76b4deb3c1a42d5cffb6731ab918aabfad816a7e138be3f5d4fa042c0c98a3e03ea0c4a2d4e30e60115d3df4a0 WHIRLPOOL 0c0fbcddbcbfd4c6c06428a6863b25deece4b4306f867f03a283a7916838073f94d5b9cea6983d0fd86e9066f4bf6d98ada59c24776a7c3f677375334d5012b3
 DIST openvas-libraries-8.0+beta3.tar.gz 588555 SHA256 363e4e0cfa57968619847a77a97e19a614f25e076ddd6cb6077141fd8c17f7c5 SHA512 710d2337d0dc82eb0502c488c65be953a5ad5e641f7583b4874ffc5e582030fd01de2759381e2c91be330834e9ae03b0ebb9bc880b7c5258b324b9a6c3b1d152 WHIRLPOOL ef250d4ed29dfefdffc7a34952ac890136577376b1e97adc1d285dfa8d5891e24b8342510074765aa54c62af87ba038d7fd85434de76d076a594dc446093f647
 DIST openvas-libraries-8.0+beta4.tar.gz 589073 SHA256 0fc023d72833f27e6a8823d5c2865126527064c502c403fc22c52938a529283b SHA512 31e5e56394b868ec1483052116a631d7323dcd2a7e6e85439d4f241119dcf98fc2775a962b2bca54e8407d89f7562d99f9bfa8197246f345917e7b0cc2eafe37 WHIRLPOOL 6263157189dbe690f314b7e2e90fa29649e975e4743fc77a96f901549d566b3e3948ad64cadb7db74b8c20eeb1e2c4e5e91c958eb6b18e2d49ba5f95914b3feb
+DIST openvas-libraries-8.0+beta5.tar.gz 600233 SHA256 b8f1fcb667658cca6c89f5fc72b760eeb968edd75638d545fcb1c54a7f1a753f SHA512 bffbc371e59d0c5ee88d20168295da3c28a4cb39fb7f4c8beb691fd05228aad8361f5fe528935c2c7b442ddf06de122c3e89bd3f3127aa0277f587318af3d6af WHIRLPOOL 4b9200673efd9c1147ae23411a3db39877a11ef66bc4977864e4b6642304115ab0e9df8f7d27fe4eca10827186fb1df12c9ab175da46443d9975e73bd0f6d376
 EBUILD openvas-libraries-7.0.5.ebuild 1256 SHA256 a71df8fcf39925a7ab96b8f078ab5df44ce073ea78ee95e507ee658d555cbc31 SHA512 86a38ed2c3d018e4977c6075e904f3741759ffa22d6a5cb7ada590fbc21c7b4f24e441ffe7a5c47b05c01bc27580f3e40ec3a26362a1edea68f3fb4a794d0d9f WHIRLPOOL 4ec010b35f2e76ca8393e9a168ebe65798c20a921a7ae7b6b2dc21bffbfecd64ffd3e1017237b00fd0ed49443d0e644216ba0235df90521dbc091f8300e8e335
 EBUILD openvas-libraries-7.0.6.ebuild 1295 SHA256 bb06db9396e101a226e465eb2a2c68baa3a0eaf968d8d485eb435b5bbc4cfac2 SHA512 71efb8031a567a6eda9a786071a29d848e60c29fb6add6fedd492f3b26598534b9f4434d24d2e3fbe4b40ebb35b42275beb3c3bac75d55cce99e3850f0de690c WHIRLPOOL cc04867caf7b9ef44e7f338986b15ee212c0230611f7c58124f6c7e4cdd00abe3afe50e0ca790e419e819c7f57ae646eb02663c82a342e8e976991405f3761fc
+EBUILD openvas-libraries-7.0.7.ebuild 1302 SHA256 fb11538d2449c851207bb2af276eff2d643d8eecb54264e42979456b6731415a SHA512 d05ad6a0cf12a5a3d1784d7a54881209eaab33b753b92f34c76ca9d2cc447630ee2a4f6eb83d9f08444f531d429c1de04c327a5543c1b36a5cb093078ee848e4 WHIRLPOOL 90d70f10977c402c154d859a8cef5b7ebcd7c9f3edf10f3c25c713dedf2dd1d9e86f73c4a9ba959bdcb1e35afa3255a47d45531cb607da153a63507eb3fe6d78
 EBUILD openvas-libraries-8.0_beta3.ebuild 1322 SHA256 dc4a0e2591ed955b6fa268fdca0a75d4f2f7a4a6acaa542f7669dc07a5d471b9 SHA512 a57c33a83f4f0d563990d87a5854cd8f2fd654caa69c0d64de8091db21289404e216ceb646bc22452f2322d50acd44de75ce8e7977770a2b224ac8da484899b9 WHIRLPOOL b33055a30e6cbfa450c794d91c9914e389eff5f3a60b670f4950cd123aae43dd6f27069be33af9374924b1787211018a8645230f2cbb196ac14ba56958fdac4c
 EBUILD openvas-libraries-8.0_beta4.ebuild 1291 SHA256 48b2e28db10c2a8732d94a17e2f264d3ff773de5d8c0bb9bf1a63f5552a75404 SHA512 a44de4ae02d462a02988bd5b16ee2d9552919a587695679806bc966552290660895ce0649819fea6e172bb2943f5dbd8b5bebf4fd98203e20c0bd11b954261ea WHIRLPOOL 5b6f9be19107a8c93ed47202aad62b47f4ad0946ed27ecc60bc6aeb7b9ecf80c7ab578619648c349270b9cbae519db7d88ff75cdf01d58d9b861b3172d7f9ef8
-MISC ChangeLog 5285 SHA256 ad5fef8202f0de7e86835408913f70c4d420cc41e1b22ad15d9756c62b6ad542 SHA512 5c008d3b489333b4eee1c4c7a381b18256fd55772147b22a4010bb35207450123b4141b9a15e0400c3ce448b717d1bac77e83fc97f29cac06c7de0573944898e WHIRLPOOL 5a76ee9778adb005e5255f7407d84e41c207544b585f5ec3085806bf5544e3794c391242454feb19b52bdec5f94b327095cdf9b87410707945b0efa0483153b2
+EBUILD openvas-libraries-8.0_beta5.ebuild 1332 SHA256 ecfc8c1ec92e9ea50038e6820f7e5cd8d1f8e1bd40ef5ae43bce36c2bf4fdceb SHA512 76589581c5c19972191e5216997148cd2049be4b2e6a2a57792c83d96f6891089aae736b091a0e50bf177be41b46886b4c58cdfec264812c16b98858598e7dec WHIRLPOOL 911b45c2afd72513b98457646fe089010a3337dd0bed0bb4fb0616220e715c55e01db16b7fb24187e92141cfe5d4a3b65f80ecc1401bddedd8be0541bb906332
+MISC ChangeLog 5503 SHA256 8860953aabcf6b7c9e4adc82fe9ecefcc1fcdaa0b2993736cd662083bb0800a5 SHA512 b9e879ca6535c05d8d89e0a06504ed421b1d289c020c31450c69ef631f48229d060a57eaffa6bd617e68c16c5453cd1b1bfc5b881364eb7d9e8b5a063708b47b WHIRLPOOL bf53916b315c36f5cea2909babcecdd89c18d082f686558b0a165dadc16c8a08e9a9e5ac8285f718fb1c0312d70afce14ae34004f5811efc7064b62656a8dfc4
 MISC metadata.xml 272 SHA256 dcb8ec15610a3eef62f9d23edad84415c2e533cdbd39a2e04bad6228e3fba98f SHA512 693a10453cc5ae8d645ba4f45439931fbe69c5dd1f0710b30a311481ec7d4dd33b6291e1ac0accf8fe27154b31fc33095e965fb2e2afb951d4a773b39ae02767 WHIRLPOOL a05cbbef3e2da2acc698abcc814290cd39484de28ebc321fd72af097cab0cee36a896cfcaed8fa3ab63f6199a18599ef590c08ead21809576103772ba9a8b400
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0
 
-iQJ8BAEBCgBmBQJUxRw6XxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+iQJ8BAEBCgBmBQJU0IxoXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
 ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQyQ0JDQjFGMzBDQ0UxMjFGNENDNDgxMDdC
-OUQ0RjIzMUJEMTU1OEFCAAoJELnU8jG9FVir2qsP/2JS0hXbUn91ZmZhs/Uj2Qef
-WZawRZ1n/a/q5OQVwn7Zv5I0qeIlY5anJWF8iFfwp5BL8PBYNZGSK+4ORnXBF5qZ
-MGSwIshAGG+MMm6VZp2DhEn+72HLXDDOGlgrpErI4h4am0/ZmTvohKd13E92tLq3
-qyNHAEj2/aQKbrc7tVFk4cC+pW5A9GhObHRttLRV4zvphEqBH1sIeAynsGuKsSaH
-/zuDG8PghKLMCFs2SRCxNwBnxDn56Sghh0PV/4tZ8W1ufPJ8Hw5ipTg8NyGEy4RM
-FRfSrvN2cmB7CH/Lc8wlFXjnLmZ7swKL0qsoHk5n233u075Otet2T4k2yFg0Zx4C
-lrkS5A5i6jeC3L2+FykwQgddVTnW7P6oQL7+n5aogCWXvXmPdpvV/zPqMkruDqjX
-9ASNGc5JcTKOHqi/HdaDmY5vGwgVj9g7e8IVgeeRxPsAj3Geam8c3eXE2siC+9L4
-A4guPSLza0SoYe1JWWV9mUh36raAASnNwEXl9QCSYx3T5BQwwSlu9uZeLnPvVSai
-0xRvffBLWGn2Y6agg9VkhiMzd1xX+VJY5GcdrQoVFtOg1UV1p3sNNkzMm8AKHXte
-4OyXTyPemBDypqI7WLyJ+j9yhEko18RfcAm1GerPRl0IkB+sKKOHDXPqZHmavnn2
-BVJHSWSq4U1pmvySrdC5
-=n8pP
+OUQ0RjIzMUJEMTU1OEFCAAoJELnU8jG9FVirK1IQAIImOhnNDjFwsDAHjFJxvB3m
+ac/OjTMeQQmFesZcah/8RtchhGfWqYXnvQWY/gREISLrb1vd7OSAuAthAEtOzf7M
+dqjeKBoSKro9/ydGrplr7PyKzGYZoWHl3QEHvENezmOjSzkfTmw0TaIZvYxdlMUV
+jPYMzQF0HFO1HS1gNi6Q/X9/MSDgH7m/9QgGA47arRzL8pKZmJYlTpA4HVdVAbBn
+rAPHNxU+7JfGokAmQ/QEKQLq+k/fiNeObERID0Hbws2h2lQp/A4eps0R8RSPC8HN
+BILuPyljCeiDxrXGFghqzp4w3+biwmsJyAWkQteaFJt6m6sA5RMDzaQmR3i+sSVi
+BQun1cNc6mTO12eNnIukw8De2um6DCGP+ZrRZWgwyGj1NBwiUZv+b53QSStUUaj4
+oIuiK7KUgJ5fsEfyKwa+G58n1sR/kmEtfc1tBt3LWgkpD6o/S2oJOM75WlWboKJ8
+OWMr1cSc1f2xMvcURK8nqWV5ue00zYEgBvsZ8QzRt02+0QhChgmdki5/tpvBT5gy
+32JGuVC7rckwOgy9W+pLZyEZtTFWsBh2GU+kutb4ihhZL1wPtEiWd0WfG+hznPb+
+yHkxPsq8DhGOrtxh1jGhanVp3ZtI99ThY3P7yCEdOwyz1AQIEfRgv3usW14cUyED
+Te9bSpDMhXK1TDDXrwtC
+=VEq8
 -----END PGP SIGNATURE-----
