@@ -1,6 +1,13 @@
 # ChangeLog for net-analyzer/openvas-libraries
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-analyzer/openvas-libraries/ChangeLog,v 1.30 2015/01/25 16:36:34 jlec Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-analyzer/openvas-libraries/ChangeLog,v 1.31 2015/02/03 08:52:55 jlec Exp $
+
+*openvas-libraries-8.0_beta5 (03 Feb 2015)
+*openvas-libraries-7.0.7 (03 Feb 2015)
+
+  03 Feb 2015; Justin Lecher <jlec@gentoo.org> +openvas-libraries-7.0.7.ebuild,
+  +openvas-libraries-8.0_beta5.ebuild:
+  Version BUmp
 
   25 Jan 2015; Justin Lecher <jlec@gentoo.org> openvas-libraries-7.0.6.ebuild,
   +files/openvas-libraries-7.0.6-underlinking.patch:
